--- a/HolyBible.html
+++ b/HolyBible.html
@@ -45,7 +45,7 @@
         <input type="button" value="&#128475;" onclick="changeFontSize(-0.5)" tabindex="-1" />
         <input type="button" value="&#128474;" onclick="changeFontSize(0.5)" tabindex="-1" />
         <input type="button" onclick="theme()" value="&#128161;" tabindex="-1" />
-        <input id="book" list="books" value="Genesis" onchange="search(this)" />
+        <input id="book" list="books" value="Genesis" onchange="search(2)" />
         <datalist id="books">
             <option value="Genesis" />
             <option value="Exodus" />
@@ -115,10 +115,10 @@
             <option value="Revelation" />
         </datalist>
         <input type="button" value="&#8722;" onclick="changeNumber(1,-1)" tabindex="-1" /><!--
-	--><input type="text" inputmode="numeric" style="width: 50px;" id="chapter" value="1" min="1" max="1" placeholder="Chapter" onchange="search()" /><!--
+	--><input type="text" inputmode="numeric" style="width: 50px;" id="chapter" value="1" min="1" max="1" placeholder="Chapter" onchange="search(1)" /><!--
 	--><input type="button" value="&#43;" onclick="changeNumber(1,1)" tabindex="-1" /> 
 	<input type="button" value="&#8722;" onclick="changeNumber(2,-1)" tabindex="-1" /><!--
-	--><input type="text" inputmode="numeric" style="width: 50px;" id="verse" value="1" min="1" max="1" placeholder="Verse" onchange="search()" /><!--
+	--><input type="text" inputmode="numeric" style="width: 50px;" id="verse" value="1" min="1" max="1" placeholder="Verse" onchange="search(0)" /><!--
 	--><input type="button" value="&#43;" onclick="changeNumber(2,1)" tabindex="-1" />
         <input type="button" onclick="search()" value="Search" />
     </div>
@@ -139,6 +139,20 @@
     <script type="text/javascript">
         var maxChapter = 1;
         var maxVerse = 1;
+	    
+	function changeFontSize(delta) {
+            var tags = document.querySelectorAll("table");
+            for (i = 0; i < tags.length; i++) {
+                if (tags[i].style.fontSize) {
+                    var s = parseFloat(tags[i].style.fontSize.replace("em", ""));
+                } else {
+                    var s = 1.5;
+                }
+                s += parseFloat(delta);
+                tags[i].style.fontSize = s + "em";
+            }
+        }
+	    
         function theme() {
             var element = document.body;
             element.classList.toggle("light-mode");
@@ -182,32 +196,27 @@
             xmlhttp.open("GET", fileurl, true);
             xmlhttp.send();
         }
-        function search() {
+        function search(num) {
             loadXMLDoc("English", "https://raw.githubusercontent.com/Salvador-Fernandes/HolyBible/main/XMLs/English.xml");
             loadXMLDoc("Hindi", "https://raw.githubusercontent.com/Salvador-Fernandes/HolyBible/main/XMLs/Hindi.xml");
+	    if(parseInt(num) == 2){
+	    	document.getElementById("chapter").value = 1;
+		document.getElementById("verse").value = 1;
+	    }else if(parseInt(num) == 1){
+		document.getElementById("verse").value = 1;
+	    }	    
         }
-        search();
-
-        function changeFontSize(delta) {
-            var tags = document.querySelectorAll("table");
-            for (i = 0; i < tags.length; i++) {
-                if (tags[i].style.fontSize) {
-                    var s = parseFloat(tags[i].style.fontSize.replace("em", ""));
-                } else {
-                    var s = 1.5;
-                }
-                s += parseFloat(delta);
-                tags[i].style.fontSize = s + "em";
-            }
-        }
+        search(2);
 
         function changeNumber(input, delta) {
             var type = "";
             var min = 1;
             var max = 1;
+	    var num = 0;
             if (input == 1) {
                 type = "chapter";
                 max = maxChapter;
+		num = 1;
             } else if (input == 2) {
                 type = "verse";
                 max = maxVerse;
