--- a/HolyBible.html
+++ b/HolyBible.html
@@ -225,6 +225,7 @@
             var tag = parseInt(document.getElementById(type).value);
             if (tag + parseInt(delta) <= max && tag + parseInt(delta) >= min) {
                 document.getElementById(type).value = tag + parseInt(delta);
+		    console.log(num);
                 search(num);
             }
         }
