--- a/HolyBible.html
+++ b/HolyBible.html
@@ -20,14 +20,14 @@
             vertical-align: middle;
         }
         body {
-            background-color: black;
-            color: white;
+            background-color: black !important;
+            color: white !important;
             font-size: 25px;
         }
 
         .light-mode {
-            background-color: white;
-            color: black;
+            background-color: white !important;
+            color: black !important;
         }
         .dark-mode {
             background-color: black;
