--- a/Biblev2.html
+++ b/Biblev2.html
@@ -206,8 +206,11 @@
                 if (this.readyState == 4 && this.status == 200) {
                     parser = new DOMParser();
                     xmlDoc = parser.parseFromString(this.responseText, "text/xml");
+                    console.log("New Search")
                     var book = document.getElementById("book").value;
+                    console.log(book)
                     var books = document.getElementById("books").querySelectorAll("option");
+
                     var id = 0;
                     for (let i = 0; i < books.length; i++) {
                         if (books[i].value == book) {
@@ -215,9 +218,11 @@
                             break;
                         }
                     }
+                    console.log(id)
                     var chapter = parseInt(document.getElementById("chapter").value)-1;
+                    console.log(chapter)
                     var verse = parseInt(document.getElementById("verse").value)-1;
-
+                    console.log(verse)
                     x = xmlDoc.getElementsByTagName("book");
                     console.log(x)
                     y = x[id].getElementsByTagName("chapter");
