--- a/Biblev2.html
+++ b/Biblev2.html
@@ -148,7 +148,7 @@
                 </tr>
             </table>
         </div>
-        <div class="fab-container">
+        <div class="fab-container no-print">
             <button class="button iconbutton" onclick="addRow()"><i class="bi bi-plus"></i></button>
         </div>
     </div>
