--- a/Biblev2.html
+++ b/Biblev2.html
@@ -265,12 +265,12 @@
                         document.getElementById("verse").max = z.length;
                         maxVerse = z.length;
                         if (z[verse]) {
-                            value = z[verse].innerHTML;//.slice(1, -1)
+                            value = z[verse].innerHTML;
                         }
                     }
 
                     document.getElementsByTagName("table")[0].querySelectorAll("th")[field].innerHTML = 
-                    '<button type="button" class="btn" style="float:right;text-align:right" onclick="return removeRow(event);"><i class="bi bi-x"></i></button>'+
+                    '<button type="button" class="btn no-print" style="float:right;text-align:right" onclick="return removeRow(event);"><i class="bi bi-x"></i></button>'+
                     '<input type="text" class="btn" id="bible" list="bibles" value="'+bible+'" onchange="search(2)" style="float:right;text-align:right"/>'+
                     '<br/>'+value;
 
