--- a/HolyBible.html
+++ b/HolyBible.html
@@ -125,7 +125,7 @@
             <input type="text" class="btn" inputmode="numeric" style="width: 40px;" id="verse" value="1" min="1" max="1" placeholder="Verse" onchange="search(0)"/>
             <button type="button" class="btn" onclick="changeNumber(0,1)" tabindex="-1"><i class="bi bi-plus-circle"></i></button>
         </div>
-        <button type="button" class="btn" onclick="search()">Search <i class="bi bi-search"></i></button>
+        <!--<button type="button" class="btn" onclick="search()">Search <i class="bi bi-search"></i></button>-->
         <div class="btn-group btn-group-delta" style="float: right !important;">
             <button type="button" class="btn" onclick="changeFontSize(-0.5)" tabindex="-1"><i class="bi bi-sort-alpha-down"></i></button>
             <button type="button" class="btn" onclick="changeFontSize(0.5)" tabindex="-1"><i class="bi bi-sort-alpha-up"></i></button>
